--- a/day2/styles/catalog.css
+++ b/day2/styles/catalog.css
@@ -126,8 +126,8 @@ button:hover{
 }
 
 .footer{
-    background: rgb(32,190,199);
-    background: linear-gradient(171deg, rgba(32,190,199,1) 0%, rgba(231,135,175,1) 53%, rgba(255,248,0,1) 100%);
+    background: rgb(241,195,210);
+    background: linear-gradient(171deg, rgba(241,195,210,1) 11%, rgba(233,118,151,1) 33%, rgba(223,107,138,1) 61%, rgba(237,191,196,1) 90%);
     margin-top: 10rem;
     box-shadow: inset 0px 0px 10px rgb(34, 34, 34);
 }
